stylesheet 3 columns from alex and spacing fixes

--- a/ui/css/styles.css
+++ b/ui/css/styles.css
@@ -5,7 +5,7 @@ body {
   font-weight: 400;
 }
 a {
-  color: #e74117;
+  color: #E74117;
   border-bottom: 1px dotted #8a270e;
 }
 a:hover {
@@ -21,13 +21,67 @@ h3 {
   padding-bottom: 5px;
   border-bottom: 1px solid #777775;
 }
+/* special background for named plan */
+label.national-15 {
+  background: #ecf22f;
+}
+h2 {
+  font-family: "proxima-nova-alt", sans-serif;
+  font-weight: 700;
+  font-size: 32px;
+}
+h3 {
+  font-family: "proxima-nova-alt", sans-serif;
+  font-weight: 700;
+  font-size: 25px;
+  margin-top: 0px;
+  border: none;
+}
+#withthehelp {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.withthehelp_item {
+  margin-top: 40px;
+}
+#withthehelp p {
+  font-family: "source-sans-pro", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  color: #333333;
+  font-size: 14px;
+}
+#withthehelp img {
+  margin-bottom: 20px;
+  width: 100%;
+}
+#withthehelp img.graph {
+  max-width: 450px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+#people {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.testimonial p {
+  font-family: "source-sans-pro", sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  color: #5d5d5c;
+  font-size: 2.8rem;
+}
+#builder-list {
+  margin-bottom: 40px;
+}
 img {
   max-width: 100%;
 }
 .btn-primary,
 .btn-national {
   color: #fff;
-  background-color: #e74117;
+  background-color: #E74117;
   border-color: #8a270e;
   font-family: "source-sans-pro", sans-serif;
   font-style: normal;
@@ -43,7 +97,7 @@ img {
   border-color: #2d0d05;
 }
 header {
-  background: #5d5d5c;
+  background: #5D5D5C;
   overflow: hidden;
   height: 63px;
 }
@@ -51,13 +105,13 @@ footer,
 #faq,
 #featurettes1,
 #featurettes2 {
-  background: #f2f6e2;
+  background: #F2F6E2;
   padding: 20px 0 20px 0;
 }
 .testimonial p {
   font-family: "source-sans-pro", sans-serif;
   font-style: normal;
-  font-weight: 200;
+  font-weight: 300;
   color: #5d5d5c;
   font-size: 2.5rem;
 }
@@ -74,7 +128,7 @@ footer,
   display: none;
 }
 header h1 {
-  background: url('../img/tyee-logo-national-150px.png') no-repeat 50px 8px #a6be30;
+  background: url('../img/tyee-logo-national-150px.png') no-repeat 50px 8px #A6BE30;
   margin: 0;
   padding: 14px 0 10px 0;
   text-indent: -5000px;
@@ -115,7 +169,7 @@ header h2 {
   margin: 40px 0 20px;
 }
 #campaign-copy h1 span.join-us {
-  color: #a6be30;
+  color: #A6BE30;
 }
 #campaign-copy h1 span.triangle {
   background: url('../img/triangle.png') no-repeat center;
@@ -124,9 +178,9 @@ header h2 {
 #campaign-copy .lead {
   font-family: "proxima-nova-alt", sans-serif;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 800;
   text-transform: uppercase;
-  color: #a6be30;
+  color: #A6BE30;
 }
 #people h3 {
   border-bottom: none;
@@ -142,24 +196,24 @@ header h2 {
   font-style: normal;
   font-weight: 300;
   font-size: 20px;
-  color: #8e9e38;
+  color: #8E9E38;
   border-left: none;
   padding: 0;
   margin: 0 0 20px 0;
 }
 #campaign-widget {
-  background-color: #f2f6e2;
+  background-color: #F2F6E2;
   border-color: #cfde94;
 }
 #campaign-widget .progress-bar {
-  background-color: #e74117;
+  background-color: #E74117;
 }
 .badge {
-  background-color: #a4bc30;
+  background-color: #A4BC30;
 }
 .video-container {
   position: relative;
-  padding-bottom: 58.25%%;
+  padding-bottom: 40%%;
   padding-top: 30px;
   height: 0;
   overflow: hidden;
@@ -225,11 +279,11 @@ header h2 {
   font-weight: bold;
 }
 #campaign-widget .raised {
-  color: #e74117;
+  color: #E74117;
   letter-spacing: 0.1em;
 }
 #campaign-widget .raised-goal {
-  color: #e74117;
+  color: #E74117;
 }
 #campaign-widget .hour,
 #campaign-widget .minute {
@@ -270,10 +324,27 @@ footer,
 #featurettes2 {
   background: url('../img/section-bg-mapleleafs.png') repeat;
 }
+@media screen and (max-width: 768px) {
+  .video-container {
+    padding-bottom: 50%;
+    margin-bottom: 0px;
+    position: relative;
+    width: 95%;
+    margin-left: 2.5%;
+    margin-bottom: 20px;
+  }
+  .video-container iframe,
+  .video-container object,
+  .video-container embed {
+    width: 100%;
+    height: 100%;
+    max-height: 400px;
+  }
+}
 @media screen and (min-width: 768px) {
   /* Adjust for large desktop */
   .video-container {
-    padding-bottom: 40%;
+    padding-bottom: 34.5%;
     margin-bottom: 0px;
   }
   .video-container iframe,
@@ -310,6 +381,18 @@ footer,
   #form-onetime .input-group {
     width: 35%;
   }
+  #withthehelp p {
+    font-weight: 300;
+    color: ;
+    font-size: 2rem;
+  }
+  #people {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  #builder-list {
+    margin-bottom: 60px;
+  }
 }
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   /* Adjust for standard desktop */
@@ -324,7 +407,7 @@ footer,
 @media screen and (min-width: 768px) and (max-width: 992px) {
   /* portrait tablets */
   .video-container {
-    padding-bottom: 60%;
+    padding-bottom: 52.5%;
     margin-bottom: 40px;
   }
   .video-container iframe,
@@ -343,6 +426,10 @@ footer,
 @media screen and (min-width: 992px) {
   .testimonial img {
     display: block;
+  }
+  #withthehelp {
+    padding-top: 40px;
+    padding-bottom: 20px;
   }
 }
 html.lt-ie7 body div,
@@ -443,5 +530,18 @@ form #newspriorities label {
 }
 .awards {
   text-align: center;
-  margin: 20px 0 20px 0;
+  margin: 5px 0 20px 0;
+}
+@media screen and (min-width: 1025px) {
+  .testimonial img {
+    margin-top: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  p.quotation {
+    margin-top: 50px;
+  }
+  #people {
+    margin-top: 0px;
+  }
 }
